--- a/archives/toutiao-search/2024-05-02.md
+++ b/archives/toutiao-search/2024-05-02.md
@@ -1,55 +1,66 @@
 # 2024-05-02
 
-共 164 条
+共 173 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu May 02 2024 14:00:39 GMT+0800 (China Standard Time) -->
-1. [梅大高速塌方 官方发布安全提示](https://so.toutiao.com/search?keyword=梅大高速塌方+官方发布安全提示)
-1. [男子与父母离散60年后回家](https://so.toutiao.com/search?keyword=男子与父母离散60年后回家)
-1. [我国发明专利有效量已接近500万件](https://so.toutiao.com/search?keyword=我国发明专利有效量已接近500万件)
+<!-- 最后更新时间 Thu May 02 2024 15:00:55 GMT+0800 (China Standard Time) -->
 1. [广东高速塌陷事故已致36死](https://so.toutiao.com/search?keyword=广东高速塌陷事故已致36死)
-1. [诱骗女生骑大马 男生涉嫌违法吗](https://so.toutiao.com/search?keyword=诱骗女生骑大马+男生涉嫌违法吗)
-1. [哈尔滨中央大街再现“最美人墙”](https://so.toutiao.com/search?keyword=哈尔滨中央大街再现“最美人墙”)
-1. [高速事故遇难者家属悲痛哭泣](https://so.toutiao.com/search?keyword=高速事故遇难者家属悲痛哭泣)
-1. [高速事故救6人司机讲述救援经过](https://so.toutiao.com/search?keyword=高速事故救6人司机讲述救援经过)
-1. [杭州西湖开启“人从众”模式](https://so.toutiao.com/search?keyword=杭州西湖开启“人从众”模式)
-1. [高速塌方现场 85后司机救下6人](https://so.toutiao.com/search?keyword=高速塌方现场+85后司机救下6人)
-1. [河南一新建大桥桥面出现多个黑洞](https://so.toutiao.com/search?keyword=河南一新建大桥桥面出现多个黑洞)
-1. [成都蓉城与武汉三镇球员爆发冲突](https://so.toutiao.com/search?keyword=成都蓉城与武汉三镇球员爆发冲突)
-1. [梅大高速塌陷货车司机夫妇喊停后车](https://so.toutiao.com/search?keyword=梅大高速塌陷货车司机夫妇喊停后车)
-1. [江苏疾控辟谣新能源车辐射致癌](https://so.toutiao.com/search?keyword=江苏疾控辟谣新能源车辐射致癌)
-1. [醉汉凌晨持刀进入店铺老板淡定应对](https://so.toutiao.com/search?keyword=醉汉凌晨持刀进入店铺老板淡定应对)
-1. [高速塌方家属瘫坐在地记者几度哽咽](https://so.toutiao.com/search?keyword=高速塌方家属瘫坐在地记者几度哽咽)
-1. [奔驰男违停骂人 交警来后瞬间老实](https://so.toutiao.com/search?keyword=奔驰男违停骂人+交警来后瞬间老实)
-1. [博主曝光“辣条刺客”按克标价](https://so.toutiao.com/search?keyword=博主曝光“辣条刺客”按克标价)
-1. [女子称自家车在梅大高速塌陷前冲过](https://so.toutiao.com/search?keyword=女子称自家车在梅大高速塌陷前冲过)
-1. [成龙20本签名书变2本](https://so.toutiao.com/search?keyword=成龙20本签名书变2本)
-1. [周鸿祎回应迈巴赫中标者未付清余款](https://so.toutiao.com/search?keyword=周鸿祎回应迈巴赫中标者未付清余款)
-1. [广东省委书记就高速塌陷事故作指示](https://so.toutiao.com/search?keyword=广东省委书记就高速塌陷事故作指示)
-1. [以色列：不接受哈马斯停火条件](https://so.toutiao.com/search?keyword=以色列：不接受哈马斯停火条件)
-1. [拍下周鸿祎迈巴赫买家疑未付清余款](https://so.toutiao.com/search?keyword=拍下周鸿祎迈巴赫买家疑未付清余款)
-1. [梅大高速塌方后市民自发献血](https://so.toutiao.com/search?keyword=梅大高速塌方后市民自发献血)
-1. [中国黄金需求创21年来新高](https://so.toutiao.com/search?keyword=中国黄金需求创21年来新高)
-1. [俄罗斯缴获北约武器展在莫斯科开幕](https://so.toutiao.com/search?keyword=俄罗斯缴获北约武器展在莫斯科开幕)
-1. [微暗之火南雅被继兄侵犯](https://so.toutiao.com/search?keyword=微暗之火南雅被继兄侵犯)
-1. [夫妻失联近1个月 最后定位在泰国](https://so.toutiao.com/search?keyword=夫妻失联近1个月+最后定位在泰国)
-1. [美新一轮涉俄制裁含十余个中国实体](https://so.toutiao.com/search?keyword=美新一轮涉俄制裁含十余个中国实体)
 1. [小米SU7全网首次大修](https://so.toutiao.com/search?keyword=小米SU7全网首次大修)
+1. [我国发明专利有效量已接近500万件](https://so.toutiao.com/search?keyword=我国发明专利有效量已接近500万件)
+1. [高速塌方现场 85后司机救下6人](https://so.toutiao.com/search?keyword=高速塌方现场+85后司机救下6人)
+1. [诱骗女生骑大马 男生涉嫌违法吗](https://so.toutiao.com/search?keyword=诱骗女生骑大马+男生涉嫌违法吗)
 1. [美众院通过“反犹太主义意识法案”](https://so.toutiao.com/search?keyword=美众院通过“反犹太主义意识法案”)
-1. [吴尊现身贵州村BA](https://so.toutiao.com/search?keyword=吴尊现身贵州村BA)
-1. [美演习出动B2轰炸机被指对华秀肌肉](https://so.toutiao.com/search?keyword=美演习出动B2轰炸机被指对华秀肌肉)
+1. [高速伤者亲友：3人失联或还在坑里](https://so.toutiao.com/search?keyword=高速伤者亲友：3人失联或还在坑里)
+1. [哈尔滨中央大街再现“最美人墙”](https://so.toutiao.com/search?keyword=哈尔滨中央大街再现“最美人墙”)
+1. [奔驰男违停骂人 交警来后瞬间老实](https://so.toutiao.com/search?keyword=奔驰男违停骂人+交警来后瞬间老实)
+1. [俄罗斯缴获北约武器展在莫斯科开幕](https://so.toutiao.com/search?keyword=俄罗斯缴获北约武器展在莫斯科开幕)
+1. [梅大高速塌方 官方发布安全提示](https://so.toutiao.com/search?keyword=梅大高速塌方+官方发布安全提示)
+1. [博主曝光“辣条刺客”按克标价](https://so.toutiao.com/search?keyword=博主曝光“辣条刺客”按克标价)
+1. [台前民代谈福建舰：航母是国力象征](https://so.toutiao.com/search?keyword=台前民代谈福建舰：航母是国力象征)
+1. [江苏疾控辟谣新能源车辐射致癌](https://so.toutiao.com/search?keyword=江苏疾控辟谣新能源车辐射致癌)
+1. [高速事故遇难者家属悲痛哭泣](https://so.toutiao.com/search?keyword=高速事故遇难者家属悲痛哭泣)
+1. [日元贬值到底谁吃亏谁受益](https://so.toutiao.com/search?keyword=日元贬值到底谁吃亏谁受益)
+1. [王石放弃退休金 田朴珺发文我养你](https://so.toutiao.com/search?keyword=王石放弃退休金+田朴珺发文我养你)
+1. [梅大高速塌陷货车司机夫妇喊停后车](https://so.toutiao.com/search?keyword=梅大高速塌陷货车司机夫妇喊停后车)
+1. [美新一轮涉俄制裁含十余个中国实体](https://so.toutiao.com/search?keyword=美新一轮涉俄制裁含十余个中国实体)
+1. [夫妻失联近1个月 最后定位在泰国](https://so.toutiao.com/search?keyword=夫妻失联近1个月+最后定位在泰国)
+1. [周鸿祎回应迈巴赫中标者未付清余款](https://so.toutiao.com/search?keyword=周鸿祎回应迈巴赫中标者未付清余款)
+1. [高速塌方家属瘫坐在地记者几度哽咽](https://so.toutiao.com/search?keyword=高速塌方家属瘫坐在地记者几度哽咽)
+1. [微暗之火南雅被继兄侵犯](https://so.toutiao.com/search?keyword=微暗之火南雅被继兄侵犯)
+1. [拍下周鸿祎迈巴赫买家疑未付清余款](https://so.toutiao.com/search?keyword=拍下周鸿祎迈巴赫买家疑未付清余款)
+1. [广东省委书记就高速塌陷事故作指示](https://so.toutiao.com/search?keyword=广东省委书记就高速塌陷事故作指示)
+1. [美拟禁止华为等参与无线设备认证项目](https://so.toutiao.com/search?keyword=美拟禁止华为等参与无线设备认证项目)
+1. [杭州西湖开启“人从众”模式](https://so.toutiao.com/search?keyword=杭州西湖开启“人从众”模式)
+1. [台湾民众：两岸应友善沟通避免战争](https://so.toutiao.com/search?keyword=台湾民众：两岸应友善沟通避免战争)
+1. [网友寻疑似因梅大高速事故失联的人](https://so.toutiao.com/search?keyword=网友寻疑似因梅大高速事故失联的人)
+1. [醉汉凌晨持刀进入店铺老板淡定应对](https://so.toutiao.com/search?keyword=醉汉凌晨持刀进入店铺老板淡定应对)
+1. [中国黄金需求创21年来新高](https://so.toutiao.com/search?keyword=中国黄金需求创21年来新高)
+1. [成龙20本签名书变2本](https://so.toutiao.com/search?keyword=成龙20本签名书变2本)
 1. [美国加州大学巴以支持者爆发混战](https://so.toutiao.com/search?keyword=美国加州大学巴以支持者爆发混战)
+1. [以色列：不接受哈马斯停火条件](https://so.toutiao.com/search?keyword=以色列：不接受哈马斯停火条件)
+1. [吴尊现身贵州村BA](https://so.toutiao.com/search?keyword=吴尊现身贵州村BA)
 1. [向太透露李连杰女儿哈佛大学毕业](https://so.toutiao.com/search?keyword=向太透露李连杰女儿哈佛大学毕业)
+1. [成都蓉城与武汉三镇球员爆发冲突](https://so.toutiao.com/search?keyword=成都蓉城与武汉三镇球员爆发冲突)
+1. [王楚钦孙颖莎登沙特大满贯海报](https://so.toutiao.com/search?keyword=王楚钦孙颖莎登沙特大满贯海报)
+1. [一家五口开车遇塌方 3失联1进ICU](https://so.toutiao.com/search?keyword=一家五口开车遇塌方+3失联1进ICU)
+1. [文旅局回应昆山演唱会观众喊退票](https://so.toutiao.com/search?keyword=文旅局回应昆山演唱会观众喊退票)
+1. [男子与父母离散60年后回家](https://so.toutiao.com/search?keyword=男子与父母离散60年后回家)
+1. [美演习出动B2轰炸机被指对华秀肌肉](https://so.toutiao.com/search?keyword=美演习出动B2轰炸机被指对华秀肌肉)
+1. [假期首日青岛历史城区人从众](https://so.toutiao.com/search?keyword=假期首日青岛历史城区人从众)
+1. [间谍窃取杂交水稻种子后果有多严重](https://so.toutiao.com/search?keyword=间谍窃取杂交水稻种子后果有多严重)
+1. [五一淄博烧烤“梅开二度”](https://so.toutiao.com/search?keyword=五一淄博烧烤“梅开二度”)
+1. [洁丽雅“毛巾少爷”拍短剧出圈](https://so.toutiao.com/search?keyword=洁丽雅“毛巾少爷”拍短剧出圈)
+1. [淄博八大局锅饼小哥累出表情包](https://so.toutiao.com/search?keyword=淄博八大局锅饼小哥累出表情包)
+1. [明起中东部再迎大范围降雨](https://so.toutiao.com/search?keyword=明起中东部再迎大范围降雨)
+1. [王猛点评快船不敌独行侠](https://so.toutiao.com/search?keyword=王猛点评快船不敌独行侠)
 1. [我国三艘航空母舰各有啥优势](https://so.toutiao.com/search?keyword=我国三艘航空母舰各有啥优势)
+1. [高速事故救6人司机讲述救援经过](https://so.toutiao.com/search?keyword=高速事故救6人司机讲述救援经过)
+1. [河南一新建大桥桥面出现多个黑洞](https://so.toutiao.com/search?keyword=河南一新建大桥桥面出现多个黑洞)
+1. [女子称自家车在梅大高速塌陷前冲过](https://so.toutiao.com/search?keyword=女子称自家车在梅大高速塌陷前冲过)
+1. [梅大高速塌方后市民自发献血](https://so.toutiao.com/search?keyword=梅大高速塌方后市民自发献血)
 1. [哥伦比亚总统宣布将与以色列断交](https://so.toutiao.com/search?keyword=哥伦比亚总统宣布将与以色列断交)
 1. [以军空袭幸存者：我们还能去哪里](https://so.toutiao.com/search?keyword=以军空袭幸存者：我们还能去哪里)
-1. [五一淄博烧烤“梅开二度”](https://so.toutiao.com/search?keyword=五一淄博烧烤“梅开二度”)
-1. [日元贬值到底谁吃亏谁受益](https://so.toutiao.com/search?keyword=日元贬值到底谁吃亏谁受益)
 1. [媒体：华南虎内线受制于本钢](https://so.toutiao.com/search?keyword=媒体：华南虎内线受制于本钢)
-1. [间谍窃取杂交水稻种子后果有多严重](https://so.toutiao.com/search?keyword=间谍窃取杂交水稻种子后果有多严重)
-1. [高速伤者亲友：3人失联或还在坑里](https://so.toutiao.com/search?keyword=高速伤者亲友：3人失联或还在坑里)
-1. [王石放弃退休金 田朴珺发文我养你](https://so.toutiao.com/search?keyword=王石放弃退休金+田朴珺发文我养你)
-1. [洁丽雅“毛巾少爷”拍短剧出圈](https://so.toutiao.com/search?keyword=洁丽雅“毛巾少爷”拍短剧出圈)
 1. [韩国积极谋求入伙奥库斯说明了什么](https://so.toutiao.com/search?keyword=韩国积极谋求入伙奥库斯说明了什么)
 1. [老兵退伍10年扔手榴弹仍在60米以上](https://so.toutiao.com/search?keyword=老兵退伍10年扔手榴弹仍在60米以上)
 1. [联合国：若以军进攻拉法将是灾难](https://so.toutiao.com/search?keyword=联合国：若以军进攻拉法将是灾难)
@@ -63,7 +74,6 @@
 1. [洪剑涛在西安吃早点](https://so.toutiao.com/search?keyword=洪剑涛在西安吃早点)
 1. [校方回应男大学生诱骗女生“骑大马”](https://so.toutiao.com/search?keyword=校方回应男大学生诱骗女生“骑大马”)
 1. [福建舰海试 网友开启报地名模式](https://so.toutiao.com/search?keyword=福建舰海试+网友开启报地名模式)
-1. [网友寻疑似因梅大高速事故失联的人](https://so.toutiao.com/search?keyword=网友寻疑似因梅大高速事故失联的人)
 1. [梅大高速运营方涉多起合同纠纷案](https://so.toutiao.com/search?keyword=梅大高速运营方涉多起合同纠纷案)
 1. [高速边坡塌方为何防不胜防](https://so.toutiao.com/search?keyword=高速边坡塌方为何防不胜防)
 1. [梅大高速塌陷前后卫星地图对比](https://so.toutiao.com/search?keyword=梅大高速塌陷前后卫星地图对比)
@@ -72,7 +82,6 @@
 1. [武汉位列五一首日热门目的地第六](https://so.toutiao.com/search?keyword=武汉位列五一首日热门目的地第六)
 1. [公安回应检查站警车撞人：抓捕行动](https://so.toutiao.com/search?keyword=公安回应检查站警车撞人：抓捕行动)
 1. [专家：俄军或将对乌发起大规模攻势](https://so.toutiao.com/search?keyword=专家：俄军或将对乌发起大规模攻势)
-1. [一家五口开车遇塌方 3失联1进ICU](https://so.toutiao.com/search?keyword=一家五口开车遇塌方+3失联1进ICU)
 1. [66股符合ST新规](https://so.toutiao.com/search?keyword=66股符合ST新规)
 1. [杜文龙解读福建舰海试的关键细节](https://so.toutiao.com/search?keyword=杜文龙解读福建舰海试的关键细节)
 1. [今年一季度国内出游14.19亿人次](https://so.toutiao.com/search?keyword=今年一季度国内出游14.19亿人次)
