--- a/archives/toutiao-search/2024-05-02.md
+++ b/archives/toutiao-search/2024-05-02.md
@@ -1,58 +1,75 @@
 # 2024-05-02
 
-共 187 条
+共 201 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu May 02 2024 16:07:48 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu May 02 2024 17:01:02 GMT+0800 (China Standard Time) -->
 1. [广东高速塌陷事故已致48死](https://so.toutiao.com/search?keyword=广东高速塌陷事故已致48死)
+1. [高速塌方事故发布会全体默哀](https://so.toutiao.com/search?keyword=高速塌方事故发布会全体默哀)
+1. [高铁万箭齐发科幻感一下拉满](https://so.toutiao.com/search?keyword=高铁万箭齐发科幻感一下拉满)
+1. [美拟禁止华为等参与无线设备认证项目](https://so.toutiao.com/search?keyword=美拟禁止华为等参与无线设备认证项目)
 1. [广东书记、省长面向塌方发生地三鞠躬](https://so.toutiao.com/search?keyword=广东书记、省长面向塌方发生地三鞠躬)
-1. [我国发明专利有效量已接近500万件](https://so.toutiao.com/search?keyword=我国发明专利有效量已接近500万件)
-1. [小米SU7全网首次大修](https://so.toutiao.com/search?keyword=小米SU7全网首次大修)
-1. [高速塌方现场 85后司机救下6人](https://so.toutiao.com/search?keyword=高速塌方现场+85后司机救下6人)
 1. [杭州西湖边连续第9年现最美人墙](https://so.toutiao.com/search?keyword=杭州西湖边连续第9年现最美人墙)
+1. [中国黄金需求创21年来新高](https://so.toutiao.com/search?keyword=中国黄金需求创21年来新高)
+1. [高速塌方现场 85后司机救下6人](https://so.toutiao.com/search?keyword=高速塌方现场+85后司机救下6人)
+1. [哈尔滨中央大街再现“最美人墙”](https://so.toutiao.com/search?keyword=哈尔滨中央大街再现“最美人墙”)
+1. [美众院通过“反犹太主义意识法案”](https://so.toutiao.com/search?keyword=美众院通过“反犹太主义意识法案”)
+1. [梅大高速塌陷货车司机夫妇喊停后车](https://so.toutiao.com/search?keyword=梅大高速塌陷货车司机夫妇喊停后车)
+1. [博主曝光“辣条刺客”按克标价](https://so.toutiao.com/search?keyword=博主曝光“辣条刺客”按克标价)
+1. [刘銮鸿女儿办婚礼 刘銮雄全家缺席](https://so.toutiao.com/search?keyword=刘銮鸿女儿办婚礼+刘銮雄全家缺席)
+1. [安徽72岁老人喜得贵子系谣言](https://so.toutiao.com/search?keyword=安徽72岁老人喜得贵子系谣言)
+1. [高速塌方家属瘫坐在地记者几度哽咽](https://so.toutiao.com/search?keyword=高速塌方家属瘫坐在地记者几度哽咽)
+1. [小米SU7全网首次大修](https://so.toutiao.com/search?keyword=小米SU7全网首次大修)
+1. [王石放弃退休金 田朴珺发文我养你](https://so.toutiao.com/search?keyword=王石放弃退休金+田朴珺发文我养你)
+1. [网友寻疑似因梅大高速事故失联的人](https://so.toutiao.com/search?keyword=网友寻疑似因梅大高速事故失联的人)
+1. [夫妻失联近1个月 最后定位在泰国](https://so.toutiao.com/search?keyword=夫妻失联近1个月+最后定位在泰国)
+1. [曝美国要求沙特限制使用中国技术](https://so.toutiao.com/search?keyword=曝美国要求沙特限制使用中国技术)
+1. [买方及周鸿祎回应未付清迈巴赫余款](https://so.toutiao.com/search?keyword=买方及周鸿祎回应未付清迈巴赫余款)
+1. [诱骗女生骑大马 男生涉嫌违法吗](https://so.toutiao.com/search?keyword=诱骗女生骑大马+男生涉嫌违法吗)
+1. [微暗之火南雅被继兄侵犯](https://so.toutiao.com/search?keyword=微暗之火南雅被继兄侵犯)
+1. [一家五口开车遇塌方 3失联1进ICU](https://so.toutiao.com/search?keyword=一家五口开车遇塌方+3失联1进ICU)
+1. [奔驰男违停骂人 交警来后瞬间老实](https://so.toutiao.com/search?keyword=奔驰男违停骂人+交警来后瞬间老实)
+1. [日元贬值到底谁吃亏谁受益](https://so.toutiao.com/search?keyword=日元贬值到底谁吃亏谁受益)
+1. [高速塌方救援有5个难点和风险点](https://so.toutiao.com/search?keyword=高速塌方救援有5个难点和风险点)
+1. [台媒关注福建舰举行首次海试](https://so.toutiao.com/search?keyword=台媒关注福建舰举行首次海试)
+1. [美国再次告诫以色列：勿进攻拉法](https://so.toutiao.com/search?keyword=美国再次告诫以色列：勿进攻拉法)
+1. [醉汉凌晨持刀进入店铺老板淡定应对](https://so.toutiao.com/search?keyword=醉汉凌晨持刀进入店铺老板淡定应对)
+1. [五一淄博烧烤“梅开二度”](https://so.toutiao.com/search?keyword=五一淄博烧烤“梅开二度”)
+1. [向太透露李连杰女儿哈佛大学毕业](https://so.toutiao.com/search?keyword=向太透露李连杰女儿哈佛大学毕业)
+1. [长沙游客带旅行箱打卡武汉沙湖公园](https://so.toutiao.com/search?keyword=长沙游客带旅行箱打卡武汉沙湖公园)
+1. [萌娃一拳打趴不倒翁玩具后疑惑歪头](https://so.toutiao.com/search?keyword=萌娃一拳打趴不倒翁玩具后疑惑歪头)
+1. [淄博八大局锅饼小哥累出表情包](https://so.toutiao.com/search?keyword=淄博八大局锅饼小哥累出表情包)
+1. [我国三艘航空母舰各有啥优势](https://so.toutiao.com/search?keyword=我国三艘航空母舰各有啥优势)
+1. [洁丽雅“毛巾少爷”拍短剧出圈](https://so.toutiao.com/search?keyword=洁丽雅“毛巾少爷”拍短剧出圈)
+1. [成龙20本签名书变2本](https://so.toutiao.com/search?keyword=成龙20本签名书变2本)
+1. [福建舰海试版《让我们荡起双桨》](https://so.toutiao.com/search?keyword=福建舰海试版《让我们荡起双桨》)
+1. [飞香港航班两次降落失败剧烈颠簸](https://so.toutiao.com/search?keyword=飞香港航班两次降落失败剧烈颠簸)
+1. [美演习出动B2轰炸机被指对华秀肌肉](https://so.toutiao.com/search?keyword=美演习出动B2轰炸机被指对华秀肌肉)
+1. [男子与父母离散60年后回家](https://so.toutiao.com/search?keyword=男子与父母离散60年后回家)
+1. [申花跟队质疑足协评议疑与事实不符](https://so.toutiao.com/search?keyword=申花跟队质疑足协评议疑与事实不符)
+1. [五一假期的重庆有多火爆](https://so.toutiao.com/search?keyword=五一假期的重庆有多火爆)
+1. [独行侠大胜快船总比分3-2领先](https://so.toutiao.com/search?keyword=独行侠大胜快船总比分3-2领先)
+1. [所罗门群岛议会投票选举新一届总理](https://so.toutiao.com/search?keyword=所罗门群岛议会投票选举新一届总理)
+1. [开封万岁山举办“全国媒婆大赛”](https://so.toutiao.com/search?keyword=开封万岁山举办“全国媒婆大赛”)
+1. [1.7万发烟花3日晚将闪耀株洲夜空](https://so.toutiao.com/search?keyword=1.7万发烟花3日晚将闪耀株洲夜空)
+1. [美国加州大学巴以支持者爆发混战](https://so.toutiao.com/search?keyword=美国加州大学巴以支持者爆发混战)
+1. [媒体评“一家三代税务人”](https://so.toutiao.com/search?keyword=媒体评“一家三代税务人”)
+1. [我国发明专利有效量已接近500万件](https://so.toutiao.com/search?keyword=我国发明专利有效量已接近500万件)
 1. [名嘴：福建舰展现中国自主研发能力](https://so.toutiao.com/search?keyword=名嘴：福建舰展现中国自主研发能力)
 1. [高速伤者亲友：3人失联或还在坑里](https://so.toutiao.com/search?keyword=高速伤者亲友：3人失联或还在坑里)
-1. [日元贬值到底谁吃亏谁受益](https://so.toutiao.com/search?keyword=日元贬值到底谁吃亏谁受益)
-1. [王石放弃退休金 田朴珺发文我养你](https://so.toutiao.com/search?keyword=王石放弃退休金+田朴珺发文我养你)
 1. [高速事故遇难者家属悲痛哭泣](https://so.toutiao.com/search?keyword=高速事故遇难者家属悲痛哭泣)
-1. [奔驰男违停骂人 交警来后瞬间老实](https://so.toutiao.com/search?keyword=奔驰男违停骂人+交警来后瞬间老实)
-1. [博主曝光“辣条刺客”按克标价](https://so.toutiao.com/search?keyword=博主曝光“辣条刺客”按克标价)
-1. [安徽72岁老人喜得贵子系谣言](https://so.toutiao.com/search?keyword=安徽72岁老人喜得贵子系谣言)
 1. [梅大高速塌方 官方发布安全提示](https://so.toutiao.com/search?keyword=梅大高速塌方+官方发布安全提示)
-1. [哈尔滨中央大街再现“最美人墙”](https://so.toutiao.com/search?keyword=哈尔滨中央大街再现“最美人墙”)
-1. [夫妻失联近1个月 最后定位在泰国](https://so.toutiao.com/search?keyword=夫妻失联近1个月+最后定位在泰国)
-1. [梅大高速塌陷货车司机夫妇喊停后车](https://so.toutiao.com/search?keyword=梅大高速塌陷货车司机夫妇喊停后车)
 1. [俄罗斯缴获北约武器展在莫斯科开幕](https://so.toutiao.com/search?keyword=俄罗斯缴获北约武器展在莫斯科开幕)
-1. [美国加州大学巴以支持者爆发混战](https://so.toutiao.com/search?keyword=美国加州大学巴以支持者爆发混战)
-1. [诱骗女生骑大马 男生涉嫌违法吗](https://so.toutiao.com/search?keyword=诱骗女生骑大马+男生涉嫌违法吗)
-1. [高速塌方家属瘫坐在地记者几度哽咽](https://so.toutiao.com/search?keyword=高速塌方家属瘫坐在地记者几度哽咽)
 1. [周鸿祎回应迈巴赫中标者未付清余款](https://so.toutiao.com/search?keyword=周鸿祎回应迈巴赫中标者未付清余款)
-1. [微暗之火南雅被继兄侵犯](https://so.toutiao.com/search?keyword=微暗之火南雅被继兄侵犯)
 1. [广东省委书记就高速塌陷事故作指示](https://so.toutiao.com/search?keyword=广东省委书记就高速塌陷事故作指示)
-1. [中国黄金需求创21年来新高](https://so.toutiao.com/search?keyword=中国黄金需求创21年来新高)
-1. [美国再次告诫以色列：勿进攻拉法](https://so.toutiao.com/search?keyword=美国再次告诫以色列：勿进攻拉法)
-1. [刘銮鸿女儿办婚礼 刘銮雄全家缺席](https://so.toutiao.com/search?keyword=刘銮鸿女儿办婚礼+刘銮雄全家缺席)
-1. [美演习出动B2轰炸机被指对华秀肌肉](https://so.toutiao.com/search?keyword=美演习出动B2轰炸机被指对华秀肌肉)
 1. [杭州西湖开启“人从众”模式](https://so.toutiao.com/search?keyword=杭州西湖开启“人从众”模式)
-1. [美拟禁止华为等参与无线设备认证项目](https://so.toutiao.com/search?keyword=美拟禁止华为等参与无线设备认证项目)
 1. [乔治：曾2-3落后独行侠但最终翻盘](https://so.toutiao.com/search?keyword=乔治：曾2-3落后独行侠但最终翻盘)
-1. [五一淄博烧烤“梅开二度”](https://so.toutiao.com/search?keyword=五一淄博烧烤“梅开二度”)
-1. [一家五口开车遇塌方 3失联1进ICU](https://so.toutiao.com/search?keyword=一家五口开车遇塌方+3失联1进ICU)
-1. [成龙20本签名书变2本](https://so.toutiao.com/search?keyword=成龙20本签名书变2本)
-1. [向太透露李连杰女儿哈佛大学毕业](https://so.toutiao.com/search?keyword=向太透露李连杰女儿哈佛大学毕业)
-1. [美众院通过“反犹太主义意识法案”](https://so.toutiao.com/search?keyword=美众院通过“反犹太主义意识法案”)
 1. [梅大高速塌方后市民自发献血](https://so.toutiao.com/search?keyword=梅大高速塌方后市民自发献血)
 1. [德媒：乌军前线面临局部崩溃危险](https://so.toutiao.com/search?keyword=德媒：乌军前线面临局部崩溃危险)
 1. [奥尼尔：快船到了最后在打英雄球](https://so.toutiao.com/search?keyword=奥尼尔：快船到了最后在打英雄球)
-1. [洁丽雅“毛巾少爷”拍短剧出圈](https://so.toutiao.com/search?keyword=洁丽雅“毛巾少爷”拍短剧出圈)
 1. [成都2024汤尤杯小组赛收官](https://so.toutiao.com/search?keyword=成都2024汤尤杯小组赛收官)
-1. [淄博八大局锅饼小哥累出表情包](https://so.toutiao.com/search?keyword=淄博八大局锅饼小哥累出表情包)
-1. [网友寻疑似因梅大高速事故失联的人](https://so.toutiao.com/search?keyword=网友寻疑似因梅大高速事故失联的人)
 1. [孔德昕：欧文贡献远超数据的存在感](https://so.toutiao.com/search?keyword=孔德昕：欧文贡献远超数据的存在感)
-1. [男子与父母离散60年后回家](https://so.toutiao.com/search?keyword=男子与父母离散60年后回家)
-1. [醉汉凌晨持刀进入店铺老板淡定应对](https://so.toutiao.com/search?keyword=醉汉凌晨持刀进入店铺老板淡定应对)
 1. [国道G205白渡镇悦一路段山体滑坡](https://so.toutiao.com/search?keyword=国道G205白渡镇悦一路段山体滑坡)
-1. [飞香港航班两次降落失败剧烈颠簸](https://so.toutiao.com/search?keyword=飞香港航班两次降落失败剧烈颠簸)
 1. [议员呼吁美政府敦促以不要进攻拉法](https://so.toutiao.com/search?keyword=议员呼吁美政府敦促以不要进攻拉法)
 1. [广东高速塌陷事故已致36死](https://so.toutiao.com/search?keyword=广东高速塌陷事故已致36死)
 1. [台前民代谈福建舰：航母是国力象征](https://so.toutiao.com/search?keyword=台前民代谈福建舰：航母是国力象征)
@@ -69,7 +86,6 @@
 1. [间谍窃取杂交水稻种子后果有多严重](https://so.toutiao.com/search?keyword=间谍窃取杂交水稻种子后果有多严重)
 1. [明起中东部再迎大范围降雨](https://so.toutiao.com/search?keyword=明起中东部再迎大范围降雨)
 1. [王猛点评快船不敌独行侠](https://so.toutiao.com/search?keyword=王猛点评快船不敌独行侠)
-1. [我国三艘航空母舰各有啥优势](https://so.toutiao.com/search?keyword=我国三艘航空母舰各有啥优势)
 1. [高速事故救6人司机讲述救援经过](https://so.toutiao.com/search?keyword=高速事故救6人司机讲述救援经过)
 1. [河南一新建大桥桥面出现多个黑洞](https://so.toutiao.com/search?keyword=河南一新建大桥桥面出现多个黑洞)
 1. [女子称自家车在梅大高速塌陷前冲过](https://so.toutiao.com/search?keyword=女子称自家车在梅大高速塌陷前冲过)
@@ -81,7 +97,6 @@
 1. [联合国：若以军进攻拉法将是灾难](https://so.toutiao.com/search?keyword=联合国：若以军进攻拉法将是灾难)
 1. [淄博赵大爷烧烤7点就排起长队](https://so.toutiao.com/search?keyword=淄博赵大爷烧烤7点就排起长队)
 1. [五一冷门旅游目的地](https://so.toutiao.com/search?keyword=五一冷门旅游目的地)
-1. [独行侠大胜快船总比分3-2领先](https://so.toutiao.com/search?keyword=独行侠大胜快船总比分3-2领先)
 1. [凯尔特人大胜4-1淘汰热火](https://so.toutiao.com/search?keyword=凯尔特人大胜4-1淘汰热火)
 1. [泰国五一将迎23万中国游客](https://so.toutiao.com/search?keyword=泰国五一将迎23万中国游客)
 1. [梅大高速失联五人不在医院收治名单](https://so.toutiao.com/search?keyword=梅大高速失联五人不在医院收治名单)
@@ -106,7 +121,6 @@
 1. [赣州特斯拉失控翻滚致1重伤3轻伤](https://so.toutiao.com/search?keyword=赣州特斯拉失控翻滚致1重伤3轻伤)
 1. [外卖员每次花15分钟等瘫痪女子吃饭](https://so.toutiao.com/search?keyword=外卖员每次花15分钟等瘫痪女子吃饭)
 1. [梅龙高速去年也因暴雨发生过塌方](https://so.toutiao.com/search?keyword=梅龙高速去年也因暴雨发生过塌方)
-1. [福建舰海试版《让我们荡起双桨》](https://so.toutiao.com/search?keyword=福建舰海试版《让我们荡起双桨》)
 1. [北京男子开车冲撞等红灯外卖员被刑拘](https://so.toutiao.com/search?keyword=北京男子开车冲撞等红灯外卖员被刑拘)
 1. [中方批美方在巴以问题上滥用否决权](https://so.toutiao.com/search?keyword=中方批美方在巴以问题上滥用否决权)
 1. [皮耶罗玩梗：桑乔应该去曼联效力](https://so.toutiao.com/search?keyword=皮耶罗玩梗：桑乔应该去曼联效力)
