--- a/archives/toutiao-search/2024-05-02.md
+++ b/archives/toutiao-search/2024-05-02.md
@@ -1,51 +1,72 @@
 # 2024-05-02
 
-共 201 条
+共 217 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu May 02 2024 17:01:02 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu May 02 2024 18:00:43 GMT+0800 (China Standard Time) -->
 1. [广东高速塌陷事故已致48死](https://so.toutiao.com/search?keyword=广东高速塌陷事故已致48死)
-1. [高速塌方事故发布会全体默哀](https://so.toutiao.com/search?keyword=高速塌方事故发布会全体默哀)
-1. [高铁万箭齐发科幻感一下拉满](https://so.toutiao.com/search?keyword=高铁万箭齐发科幻感一下拉满)
-1. [美拟禁止华为等参与无线设备认证项目](https://so.toutiao.com/search?keyword=美拟禁止华为等参与无线设备认证项目)
-1. [广东书记、省长面向塌方发生地三鞠躬](https://so.toutiao.com/search?keyword=广东书记、省长面向塌方发生地三鞠躬)
-1. [杭州西湖边连续第9年现最美人墙](https://so.toutiao.com/search?keyword=杭州西湖边连续第9年现最美人墙)
-1. [中国黄金需求创21年来新高](https://so.toutiao.com/search?keyword=中国黄金需求创21年来新高)
-1. [高速塌方现场 85后司机救下6人](https://so.toutiao.com/search?keyword=高速塌方现场+85后司机救下6人)
-1. [哈尔滨中央大街再现“最美人墙”](https://so.toutiao.com/search?keyword=哈尔滨中央大街再现“最美人墙”)
-1. [美众院通过“反犹太主义意识法案”](https://so.toutiao.com/search?keyword=美众院通过“反犹太主义意识法案”)
-1. [梅大高速塌陷货车司机夫妇喊停后车](https://so.toutiao.com/search?keyword=梅大高速塌陷货车司机夫妇喊停后车)
-1. [博主曝光“辣条刺客”按克标价](https://so.toutiao.com/search?keyword=博主曝光“辣条刺客”按克标价)
-1. [刘銮鸿女儿办婚礼 刘銮雄全家缺席](https://so.toutiao.com/search?keyword=刘銮鸿女儿办婚礼+刘銮雄全家缺席)
-1. [安徽72岁老人喜得贵子系谣言](https://so.toutiao.com/search?keyword=安徽72岁老人喜得贵子系谣言)
-1. [高速塌方家属瘫坐在地记者几度哽咽](https://so.toutiao.com/search?keyword=高速塌方家属瘫坐在地记者几度哽咽)
 1. [小米SU7全网首次大修](https://so.toutiao.com/search?keyword=小米SU7全网首次大修)
-1. [王石放弃退休金 田朴珺发文我养你](https://so.toutiao.com/search?keyword=王石放弃退休金+田朴珺发文我养你)
-1. [网友寻疑似因梅大高速事故失联的人](https://so.toutiao.com/search?keyword=网友寻疑似因梅大高速事故失联的人)
-1. [夫妻失联近1个月 最后定位在泰国](https://so.toutiao.com/search?keyword=夫妻失联近1个月+最后定位在泰国)
-1. [曝美国要求沙特限制使用中国技术](https://so.toutiao.com/search?keyword=曝美国要求沙特限制使用中国技术)
+1. [高铁万箭齐发科幻感一下拉满](https://so.toutiao.com/search?keyword=高铁万箭齐发科幻感一下拉满)
+1. [广东书记、省长面向塌方发生地三鞠躬](https://so.toutiao.com/search?keyword=广东书记、省长面向塌方发生地三鞠躬)
+1. [媒体：福建舰是最强常规动力航母](https://so.toutiao.com/search?keyword=媒体：福建舰是最强常规动力航母)
+1. [中国黄金需求创21年来新高](https://so.toutiao.com/search?keyword=中国黄金需求创21年来新高)
+1. [中华保险向梅大高速预付1000万元](https://so.toutiao.com/search?keyword=中华保险向梅大高速预付1000万元)
+1. [五一哈尔滨有一亿人吧](https://so.toutiao.com/search?keyword=五一哈尔滨有一亿人吧)
+1. [哈尔滨中央大街再现“最美人墙”](https://so.toutiao.com/search?keyword=哈尔滨中央大街再现“最美人墙”)
+1. [高速塌方现场 85后司机救下6人](https://so.toutiao.com/search?keyword=高速塌方现场+85后司机救下6人)
+1. [博主曝光“辣条刺客”按克标价](https://so.toutiao.com/search?keyword=博主曝光“辣条刺客”按克标价)
+1. [广东省委书记：塌方灾害教训十分深刻](https://so.toutiao.com/search?keyword=广东省委书记：塌方灾害教训十分深刻)
+1. [高速塌方灾害发布会全体默哀](https://so.toutiao.com/search?keyword=高速塌方灾害发布会全体默哀)
+1. [安徽72岁老人喜得贵子系谣言](https://so.toutiao.com/search?keyword=安徽72岁老人喜得贵子系谣言)
+1. [日元贬值到底谁吃亏谁受益](https://so.toutiao.com/search?keyword=日元贬值到底谁吃亏谁受益)
+1. [梅大高速塌陷货车司机夫妇喊停后车](https://so.toutiao.com/search?keyword=梅大高速塌陷货车司机夫妇喊停后车)
+1. [五一游客从长沙橘子洲挤到五一广场](https://so.toutiao.com/search?keyword=五一游客从长沙橘子洲挤到五一广场)
+1. [“王婆”五一开封说媒现场](https://so.toutiao.com/search?keyword=“王婆”五一开封说媒现场)
+1. [高速塌方家属瘫坐在地记者几度哽咽](https://so.toutiao.com/search?keyword=高速塌方家属瘫坐在地记者几度哽咽)
+1. [萌娃一拳打趴不倒翁玩具后疑惑歪头](https://so.toutiao.com/search?keyword=萌娃一拳打趴不倒翁玩具后疑惑歪头)
 1. [买方及周鸿祎回应未付清迈巴赫余款](https://so.toutiao.com/search?keyword=买方及周鸿祎回应未付清迈巴赫余款)
 1. [诱骗女生骑大马 男生涉嫌违法吗](https://so.toutiao.com/search?keyword=诱骗女生骑大马+男生涉嫌违法吗)
-1. [微暗之火南雅被继兄侵犯](https://so.toutiao.com/search?keyword=微暗之火南雅被继兄侵犯)
-1. [一家五口开车遇塌方 3失联1进ICU](https://so.toutiao.com/search?keyword=一家五口开车遇塌方+3失联1进ICU)
-1. [奔驰男违停骂人 交警来后瞬间老实](https://so.toutiao.com/search?keyword=奔驰男违停骂人+交警来后瞬间老实)
-1. [日元贬值到底谁吃亏谁受益](https://so.toutiao.com/search?keyword=日元贬值到底谁吃亏谁受益)
 1. [高速塌方救援有5个难点和风险点](https://so.toutiao.com/search?keyword=高速塌方救援有5个难点和风险点)
-1. [台媒关注福建舰举行首次海试](https://so.toutiao.com/search?keyword=台媒关注福建舰举行首次海试)
-1. [美国再次告诫以色列：勿进攻拉法](https://so.toutiao.com/search?keyword=美国再次告诫以色列：勿进攻拉法)
+1. [夫妻失联近1个月 最后定位在泰国](https://so.toutiao.com/search?keyword=夫妻失联近1个月+最后定位在泰国)
+1. [男子与父母离散60年后回家](https://so.toutiao.com/search?keyword=男子与父母离散60年后回家)
+1. [官方：深刻汲取高速塌方灾害教训](https://so.toutiao.com/search?keyword=官方：深刻汲取高速塌方灾害教训)
+1. [微暗之火南雅被继兄侵犯](https://so.toutiao.com/search?keyword=微暗之火南雅被继兄侵犯)
+1. [王石放弃退休金 田朴珺发文我养你](https://so.toutiao.com/search?keyword=王石放弃退休金+田朴珺发文我养你)
+1. [网友寻疑似因梅大高速事故失联的人](https://so.toutiao.com/search?keyword=网友寻疑似因梅大高速事故失联的人)
+1. [奔驰男违停骂人 交警来后瞬间老实](https://so.toutiao.com/search?keyword=奔驰男违停骂人+交警来后瞬间老实)
 1. [醉汉凌晨持刀进入店铺老板淡定应对](https://so.toutiao.com/search?keyword=醉汉凌晨持刀进入店铺老板淡定应对)
+1. [美国再次告诫以色列：勿进攻拉法](https://so.toutiao.com/search?keyword=美国再次告诫以色列：勿进攻拉法)
+1. [台前民代谈福建舰：航母是国力象征](https://so.toutiao.com/search?keyword=台前民代谈福建舰：航母是国力象征)
+1. [日本一小镇拉黑布遮挡富士山远景](https://so.toutiao.com/search?keyword=日本一小镇拉黑布遮挡富士山远景)
+1. [刘銮鸿女儿办婚礼 刘銮雄全家缺席](https://so.toutiao.com/search?keyword=刘銮鸿女儿办婚礼+刘銮雄全家缺席)
+1. [杭州西湖开启“人从众”模式](https://so.toutiao.com/search?keyword=杭州西湖开启“人从众”模式)
+1. [相比前2艘航母 福建舰海试有何不同](https://so.toutiao.com/search?keyword=相比前2艘航母+福建舰海试有何不同)
+1. [美众院通过“反犹太主义意识法案”](https://so.toutiao.com/search?keyword=美众院通过“反犹太主义意识法案”)
+1. [卢：如果输G6我们的赛季就将结束](https://so.toutiao.com/search?keyword=卢：如果输G6我们的赛季就将结束)
+1. [一家五口开车遇塌方 3失联1进ICU](https://so.toutiao.com/search?keyword=一家五口开车遇塌方+3失联1进ICU)
+1. [成都蓉城与武汉三镇球员爆发冲突](https://so.toutiao.com/search?keyword=成都蓉城与武汉三镇球员爆发冲突)
+1. [韩国国会表决通过《梨泰院特别法》](https://so.toutiao.com/search?keyword=韩国国会表决通过《梨泰院特别法》)
+1. [小米SU7 Max四驱版赛道漂移](https://so.toutiao.com/search?keyword=小米SU7+Max四驱版赛道漂移)
+1. [飞香港航班两次降落失败剧烈颠簸](https://so.toutiao.com/search?keyword=飞香港航班两次降落失败剧烈颠簸)
+1. [杭州西湖边连续第9年现最美人墙](https://so.toutiao.com/search?keyword=杭州西湖边连续第9年现最美人墙)
+1. [赣州特斯拉失控翻滚致1重伤3轻伤](https://so.toutiao.com/search?keyword=赣州特斯拉失控翻滚致1重伤3轻伤)
+1. [兵马俑一天就接待6万多游客](https://so.toutiao.com/search?keyword=兵马俑一天就接待6万多游客)
+1. [五一假期首日四川景区迎来游客热潮](https://so.toutiao.com/search?keyword=五一假期首日四川景区迎来游客热潮)
+1. [黄景瑜说不敢认领拍军警是统治区](https://so.toutiao.com/search?keyword=黄景瑜说不敢认领拍军警是统治区)
+1. [参战老兵祭奠老山战役牺牲战友](https://so.toutiao.com/search?keyword=参战老兵祭奠老山战役牺牲战友)
+1. [高速塌方事故发布会全体默哀](https://so.toutiao.com/search?keyword=高速塌方事故发布会全体默哀)
+1. [美拟禁止华为等参与无线设备认证项目](https://so.toutiao.com/search?keyword=美拟禁止华为等参与无线设备认证项目)
+1. [曝美国要求沙特限制使用中国技术](https://so.toutiao.com/search?keyword=曝美国要求沙特限制使用中国技术)
+1. [台媒关注福建舰举行首次海试](https://so.toutiao.com/search?keyword=台媒关注福建舰举行首次海试)
 1. [五一淄博烧烤“梅开二度”](https://so.toutiao.com/search?keyword=五一淄博烧烤“梅开二度”)
 1. [向太透露李连杰女儿哈佛大学毕业](https://so.toutiao.com/search?keyword=向太透露李连杰女儿哈佛大学毕业)
 1. [长沙游客带旅行箱打卡武汉沙湖公园](https://so.toutiao.com/search?keyword=长沙游客带旅行箱打卡武汉沙湖公园)
-1. [萌娃一拳打趴不倒翁玩具后疑惑歪头](https://so.toutiao.com/search?keyword=萌娃一拳打趴不倒翁玩具后疑惑歪头)
 1. [淄博八大局锅饼小哥累出表情包](https://so.toutiao.com/search?keyword=淄博八大局锅饼小哥累出表情包)
 1. [我国三艘航空母舰各有啥优势](https://so.toutiao.com/search?keyword=我国三艘航空母舰各有啥优势)
 1. [洁丽雅“毛巾少爷”拍短剧出圈](https://so.toutiao.com/search?keyword=洁丽雅“毛巾少爷”拍短剧出圈)
 1. [成龙20本签名书变2本](https://so.toutiao.com/search?keyword=成龙20本签名书变2本)
 1. [福建舰海试版《让我们荡起双桨》](https://so.toutiao.com/search?keyword=福建舰海试版《让我们荡起双桨》)
-1. [飞香港航班两次降落失败剧烈颠簸](https://so.toutiao.com/search?keyword=飞香港航班两次降落失败剧烈颠簸)
 1. [美演习出动B2轰炸机被指对华秀肌肉](https://so.toutiao.com/search?keyword=美演习出动B2轰炸机被指对华秀肌肉)
-1. [男子与父母离散60年后回家](https://so.toutiao.com/search?keyword=男子与父母离散60年后回家)
 1. [申花跟队质疑足协评议疑与事实不符](https://so.toutiao.com/search?keyword=申花跟队质疑足协评议疑与事实不符)
 1. [五一假期的重庆有多火爆](https://so.toutiao.com/search?keyword=五一假期的重庆有多火爆)
 1. [独行侠大胜快船总比分3-2领先](https://so.toutiao.com/search?keyword=独行侠大胜快船总比分3-2领先)
@@ -62,7 +83,6 @@
 1. [俄罗斯缴获北约武器展在莫斯科开幕](https://so.toutiao.com/search?keyword=俄罗斯缴获北约武器展在莫斯科开幕)
 1. [周鸿祎回应迈巴赫中标者未付清余款](https://so.toutiao.com/search?keyword=周鸿祎回应迈巴赫中标者未付清余款)
 1. [广东省委书记就高速塌陷事故作指示](https://so.toutiao.com/search?keyword=广东省委书记就高速塌陷事故作指示)
-1. [杭州西湖开启“人从众”模式](https://so.toutiao.com/search?keyword=杭州西湖开启“人从众”模式)
 1. [乔治：曾2-3落后独行侠但最终翻盘](https://so.toutiao.com/search?keyword=乔治：曾2-3落后独行侠但最终翻盘)
 1. [梅大高速塌方后市民自发献血](https://so.toutiao.com/search?keyword=梅大高速塌方后市民自发献血)
 1. [德媒：乌军前线面临局部崩溃危险](https://so.toutiao.com/search?keyword=德媒：乌军前线面临局部崩溃危险)
@@ -72,14 +92,12 @@
 1. [国道G205白渡镇悦一路段山体滑坡](https://so.toutiao.com/search?keyword=国道G205白渡镇悦一路段山体滑坡)
 1. [议员呼吁美政府敦促以不要进攻拉法](https://so.toutiao.com/search?keyword=议员呼吁美政府敦促以不要进攻拉法)
 1. [广东高速塌陷事故已致36死](https://so.toutiao.com/search?keyword=广东高速塌陷事故已致36死)
-1. [台前民代谈福建舰：航母是国力象征](https://so.toutiao.com/search?keyword=台前民代谈福建舰：航母是国力象征)
 1. [江苏疾控辟谣新能源车辐射致癌](https://so.toutiao.com/search?keyword=江苏疾控辟谣新能源车辐射致癌)
 1. [美新一轮涉俄制裁含十余个中国实体](https://so.toutiao.com/search?keyword=美新一轮涉俄制裁含十余个中国实体)
 1. [拍下周鸿祎迈巴赫买家疑未付清余款](https://so.toutiao.com/search?keyword=拍下周鸿祎迈巴赫买家疑未付清余款)
 1. [台湾民众：两岸应友善沟通避免战争](https://so.toutiao.com/search?keyword=台湾民众：两岸应友善沟通避免战争)
 1. [以色列：不接受哈马斯停火条件](https://so.toutiao.com/search?keyword=以色列：不接受哈马斯停火条件)
 1. [吴尊现身贵州村BA](https://so.toutiao.com/search?keyword=吴尊现身贵州村BA)
-1. [成都蓉城与武汉三镇球员爆发冲突](https://so.toutiao.com/search?keyword=成都蓉城与武汉三镇球员爆发冲突)
 1. [王楚钦孙颖莎登沙特大满贯海报](https://so.toutiao.com/search?keyword=王楚钦孙颖莎登沙特大满贯海报)
 1. [文旅局回应昆山演唱会观众喊退票](https://so.toutiao.com/search?keyword=文旅局回应昆山演唱会观众喊退票)
 1. [假期首日青岛历史城区人从众](https://so.toutiao.com/search?keyword=假期首日青岛历史城区人从众)
@@ -115,10 +133,8 @@
 1. [杜文龙解读福建舰海试的关键细节](https://so.toutiao.com/search?keyword=杜文龙解读福建舰海试的关键细节)
 1. [今年一季度国内出游14.19亿人次](https://so.toutiao.com/search?keyword=今年一季度国内出游14.19亿人次)
 1. [第一视角看梅大高速塌陷](https://so.toutiao.com/search?keyword=第一视角看梅大高速塌陷)
-1. [日本一小镇拉黑布遮挡富士山远景](https://so.toutiao.com/search?keyword=日本一小镇拉黑布遮挡富士山远景)
 1. [路面塌陷18车被困 女子称一家5口失联](https://so.toutiao.com/search?keyword=路面塌陷18车被困+女子称一家5口失联)
 1. [问界M7事故砸窗救援者在现场大哭](https://so.toutiao.com/search?keyword=问界M7事故砸窗救援者在现场大哭)
-1. [赣州特斯拉失控翻滚致1重伤3轻伤](https://so.toutiao.com/search?keyword=赣州特斯拉失控翻滚致1重伤3轻伤)
 1. [外卖员每次花15分钟等瘫痪女子吃饭](https://so.toutiao.com/search?keyword=外卖员每次花15分钟等瘫痪女子吃饭)
 1. [梅龙高速去年也因暴雨发生过塌方](https://so.toutiao.com/search?keyword=梅龙高速去年也因暴雨发生过塌方)
 1. [北京男子开车冲撞等红灯外卖员被刑拘](https://so.toutiao.com/search?keyword=北京男子开车冲撞等红灯外卖员被刑拘)
